# cooking-process-producer

./: .dockerignore  .gitignore  Cargo.toml  buf.gen.yaml  docker-compose.yml  init.sql  lefthook.yml  my.cnf  schema.sql
backend_python/: .gitignore  Dockerfile  README.md  buf.gen.yaml  main.py  pyproject.toml  recipe.py  request.sh
backend_python/src/adapter/grpc/: mapper.py
backend_python/tests/: test_order_of_steps.py  test_recipe.py
backend_rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  environments.sh
backend_rust/config/: compose-internal.yaml  local.yaml
backend_rust/manifest/: deployment.yaml
backend_rust/manifest/dev/: deployment.yaml  kustomization.yaml  namespace.yaml  secret-provider-class.yaml  service-account.yaml  service.yaml
backend_rust/manifest/dev/files/: config-dev.yaml
backend_rust/migration/: Cargo.toml
backend_rust/migration/src/: m20220101_000001_create_table.rs  m20250909_110532_add_process_steps_table.rs
backend_rust/src/: adapters.rs  application.rs  domain.rs  infrastructure.rs  lib.rs  main.rs
backend_rust/src/adapters/: api.rs  db.rs  grpc.rs  recipe_mapper.rs  repository.rs  step_mapper.rs
backend_rust/src/adapters/api/: recipe_mapper.rs  step_mapper.rs
backend_rust/src/adapters/controller/: graphql.rs
backend_rust/src/adapters/controller/graphql/: graphql_controller.rs  mutation.rs  query.rs  recipe_mapper.rs
backend_rust/src/adapters/db/: db_process_registration_repository.rs  db_recipe_repository.rs  db_resource_repository.rs
backend_rust/src/adapters/db/mysql/: resource_mapper.rs
backend_rust/src/adapters/grpc/: process_service_client.rs  recipe_mapper.rs  resource_mapper.rs  step_mapper.rs
backend_rust/src/adapters/repository/: db_process_registration_repository.rs  db_recipe_repository.rs  db_resource_repository.rs  mysql.rs
backend_rust/src/adapters/repository/mysql/: process_repository.rs  recipe_mapper.rs  recipe_repository.rs  resource_mapper.rs  resource_repository.rs  step_mapper.rs
backend_rust/src/application/: mapper.rs  port.rs  repository.rs  usecase.rs
backend_rust/src/application/mapper/: api_mapper.rs  grpc_mapper.rs
backend_rust/src/application/port/: external.rs
backend_rust/src/application/port/repository/: recipe_repository.rs  (+1 more)
backend_rust/src/application/repository/: process_registrations_repository.rs  process_repository.rs  recipe_repository.rs  resource_repository.rs
backend_rust/src/application/usecase/: calculate_one_process_use_case.rs  get_all_recipes_usecase.rs  get_all_resources_usecase.rs  get_one_recipe_by_id_usecase.rs  get_one_resource_by_id_usecase.rs  interface.rs
backend_rust/src/domain/: dto.rs  entity.rs  error.rs  process.rs  recipe.rs  resource.rs  step.rs
backend_rust/src/domain/dto/: recipe_dto.rs  resource_dto.rs  step_dto.rs
backend_rust/src/domain/entity/: process.rs  recipe.rs  resource.rs  step.rs
backend_rust/src/infrastructure/: db.rs
backend_rust/src/infrastructure/db/: db_recipe_repository.rs  db_resource_repository.rs
backend_rust/src/presentation/controller/: graphql_controller.rs
backend_rust/src/presentation/graphql/: mutation.rs  query.rs
backend_rust/tests/: create_recipe.sh  curl_createProcess.sh  recipe_query.sh  recipes_query.sh  resource_query.sh  resources_query.sh
(+29 files in other folders)
