[project]
name = "backend_python"
version = "0.1.0"
description = "A Python backend with gRPC and SQL support"
authors = [
    { name = "shota-tsuji" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "absl-py==1.4.0",
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "grpcio==1.54.2",
    "grpcio-tools==1.54.2",
    "idna==3.4",
    "numpy==1.24.3",
    "ortools==9.6.2534",
    "protobuf==4.23.1",
    "requests==2.29.0",
    "scipy==1.10.1",
    "urllib3==1.26.15",
    "sqlalchemy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"