[package]
name = "cpp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "macros", "uuid"] }
axum = { version = "0.6.18", features = [ "tokio", "macros"]}
tokio = { version = "1.0", features = ["full"] }
async-graphql = "5.0"
async-graphql-axum = "5.0"
tower-http = { version = "0.4.0", features = [ "cors","trace", "request-id"]}
tower = "0.4.13"
http = "0.2.9"
uuid = { version = "1.3.2", features = [ "v4" ]}
tonic = "0.9"
prost = "0.11"
ulid = "1.2.1"
sea-orm = { version = "1.1.0", features = [ "sqlx-mysql", "runtime-tokio", "macros", "mock" ] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.2"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
mockall = "0.13.1"